# starlis-ai

./: README.md  credits.txt  firestore.rules  package-lock.json  package.json  tailwind.config.js
agents/: .gitignore  get_token.py  main.py  requirements.txt
agents-mcp/: .gitignore  canvas_agent.py  contacts.csv  gradescope_agent.py  personal_assistant.py  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/calls/: page.tsx
components/: app-sidebar.tsx  billing-toggle.tsx  call-card.tsx  dashboard-background.tsx  footer.tsx  forgot-password-modal.tsx  hero-screen.tsx  hero-section.tsx  logo.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  navbar.tsx  noise-texture.tsx  protected-route.tsx  responsive-container.tsx  sidebar.tsx  team-switcher.tsx  test-call-button.tsx  time-based-art.tsx  toast-provider.tsx  two-factor-auth-modal.tsx  two-factor-setup.tsx
contexts/: auth-context.tsx
elevenlabs-calendar-tools/: .gitignore  Dockerfile  package-lock.json  package.json  server.js
frontend/: .firebaserc  .gitignore  README.md  firestore.rules  package-lock.json  package.json  sidebar.tsx  tailwind.config.ts
hooks/: use-auth.ts  use-mobile.ts
lib/: ai-service.ts  firebase.ts  openai-server.ts  openai-utils.ts  placeholders.ts  utils.ts
providers/: theme-provider.tsx
python_functions/: .gitignore  README.md  firebase.json
starlis-callhandling/: .gitignore  README.md  example.env  frontend-example.js  generate-jwt-secret.js  generate-test-token.js  jwtUtils.js  nginx.conf  outbound.js  package-lock.json  package.json  test-jwt.js
(+163 files in other folders)
